Update audit zip to use correct host if available